--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,11 @@ dist.jar=${dist.dir}/Practica3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.sqlite-jdbc-3.8.11.2.jar=F:\\Programacion\\Proyectos\\sqlite-jdbc-3.8.11.2.jar
+file.reference.sqlite-jdbc-3.8.11.2.jar-1=E:\\Grado\\Programacion\\Proyectos\\sqlite-jdbc-3.8.11.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
